--- a/index.html
+++ b/index.html
@@ -43,9 +43,6 @@
             <a class="nav-link js-scroll-trigger" href="#restaurant">Our restaurant</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#order">Order online</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#tapas">Our tapas</a>
           </li>
           <li class="nav-item">
@@ -67,7 +64,7 @@
       <h1 class="logo">tapas plaza</h1>
       <br>
       <h3>A nice spot at Burriana Beach for you to enjoy</h3>
-      <br><br>
+      <br>
       <div style="margin-bottom: 2rem;">
         <span class="btn btn-primary btn-lg main-button" data-glf-cuid="2b610753-63be-40b6-8901-87328aaeaea0"
           data-glf-ruid="ec152518-e808-47bc-ad04-f4549137316b"> See MENU & Order Now!</span>
@@ -156,7 +153,7 @@
     <div class="container">
       <div class="row content-white">
         <div class="col-lg-12 mx-auto content">
-          <h1>Our Tapas = Your Party</h1>
+          <h1>Our Tapas, Your Party</h1>
           <div class="row">
             <div class="col-lg-8 center-vertically">
               <h2>Our Asian Touch</h2>
