--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <div class="col-lg-6 center-vertically">
               <p>
                 We are Jeannette and Johan. Nice to meet you! With our children Giovanni, Rosa and Jaume we left Holland
-                to open our eatery Tapas Plaza in Nerja in 2006. Previously known as 'Sabor de Amor'́.
+                to open our eatery Tapas Plaza in Nerja in 2006. Previously known as 'Sabor de Amor'.
               </p>
               <p>
                 Where Jeannette has a magic touch with people, Johan has with the Wok. As a heartwarming hostess and a
@@ -240,6 +240,14 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-10 mx-auto content">
+          <div>
+            <!-- TEMPORARILY CLOSED -->
+            <h6>  
+              <b>
+                ⛔️Tapas Plaza is temporarily closed until the 1st of September! We will see you soon 🥰
+              </b>         
+            </h6>
+          </div>
           <img src="./images/sign.png" class="img-fluid" alt="Responsive image">
         </div>
       </div>
