--- a/pages/workinghours.html
+++ b/pages/workinghours.html
@@ -43,7 +43,7 @@
   </div>
 
   <!-- Footer -->
-  <footer class="py-5 bg-dark center-vertically">
+  <footer class="bg-dark center-vertically">
     <div class="m-0 text-center text-white">
       <a href="https://www.facebook.com/TapasPlazaNerja/">
         <i class="fab fa-facebook-square"></i>
