--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
-          <span class="btn btn-primary btn-sm main-button" data-glf-cuid="2b610753-63be-40b6-8901-87328aaeaea0"
+          <a class="btn-primary btn btn-sm main-button" href="/pages/menu.html" style="padding: 8px;">See Menu</a>
+          <!-- <span class="btn btn-primary btn-sm main-button" data-glf-cuid="2b610753-63be-40b6-8901-87328aaeaea0"
             data-glf-ruid="ec152518-e808-47bc-ad04-f4549137316b" style="padding: 8px;"> See MENU & Order Now!</span>
-          <script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async></script>
+          <script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async></script> -->
         </ul>
       </div>
     </div>
@@ -78,9 +79,10 @@
       <h3>A nice spot at Burriana Beach for you to enjoy</h3>
       <br>
       <div style="margin-bottom: 2rem;">
-        <span class="btn btn-primary btn-lg main-button" data-glf-cuid="2b610753-63be-40b6-8901-87328aaeaea0"
+        <a href="/pages/menu.html" class="btn btn-primary btn-lg main-button">See Menu</a>
+        <!-- <span class="btn btn-primary btn-lg main-button" data-glf-cuid="2b610753-63be-40b6-8901-87328aaeaea0"
           data-glf-ruid="ec152518-e808-47bc-ad04-f4549137316b"> See MENU & Order Now!</span>
-        <script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async></script>
+        <script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async></script> -->
       </div>
     </div>
   </header>
@@ -129,10 +131,11 @@
               than
               just a meal.
             </p>
-            <span class="btn btn-primary btn-lg main-button d-lg-none"
+            <a class="btn btn-primary btn-lg main-button d-lg-none">See Menu</a>
+            <!-- <span class="btn btn-primary btn-lg main-button d-lg-none"
               data-glf-cuid="2b610753-63be-40b6-8901-87328aaeaea0" data-glf-ruid="ec152518-e808-47bc-ad04-f4549137316b">
               See MENU & Order Now!</span>
-            <script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async></script>
+            <script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async></script> -->
             <p>
               The popularity of our Tapas Plates show that people love it. Each Plate comes with a nice selection of
               bites. You can go for Spanish, Asian, Vegetarian or even Gluten-free!
@@ -151,11 +154,12 @@
     <div class="container">
       <div class="row content-green">
         <div class="col-lg-10 mx-auto about content">
-          <h1>You can now order online & get real-time confirmation!</h1>
-          <span class="btn btn-primary main-button" data-glf-cuid="2b610753-63be-40b6-8901-87328aaeaea0"
+          <h1>Check out our menu and come visit us on the beach</h1>
+          <a href="/pages/menu.html" class="btn btn-primary main-button">See Menu</a>
+          <!-- <span class="btn btn-primary main-button" data-glf-cuid="2b610753-63be-40b6-8901-87328aaeaea0"
             data-glf-ruid="ec152518-e808-47bc-ad04-f4549137316b"> See MENU & Order Now!</span>
-          <script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async></script>
-          <h2>Tapas Plaza now does take-away & home delivery in Nerja!</h2>
+          <script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async></script> -->
+          <h3>Tapas Plaza now does take-away & home delivery in Nerja! (call us)</h3>
         </div>
       </div>
     </div>
@@ -250,7 +254,14 @@
             </h6>
           </div>
           -->
-          <img src="./images/sign.png" class="img-fluid" alt="Responsive image">
+          <h1>Opening hours</h1>
+          <div class="position-relative">
+            <img src="./images/frame.png" class="img-fluid" alt="Responsive image">
+            <div class="opening-hours">
+              <p>
+                Wednesday-Sunday<br>12:00-18:00<br><span class="small-text">Closed when it rains ;)</span>
+              </p>
+          </div>
         </div>
       </div>
     </div>
@@ -263,17 +274,18 @@
           <h1>Where to find us</h1>
           <p itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
             <span itemprop="streetAddress">Paseo Burriana</span>, <span itemprop="addressLocality">Nerja</span> <br>
-            Come visit us or order online:
+            Come visit us or order for delivery:
           </p>
-          <span class="btn btn-primary main-button" data-glf-cuid="2b610753-63be-40b6-8901-87328aaeaea0"
+          <a href="/pages/menu.html" class="btn btn-primary main-button">See Menu</a>
+          <!-- <span class="btn btn-primary main-button" data-glf-cuid="2b610753-63be-40b6-8901-87328aaeaea0"
             data-glf-ruid="ec152518-e808-47bc-ad04-f4549137316b"> See MENU & Order Now!</span>
-          <script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async></script>
+          <script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async></script> -->
           <h1>Contact us</h1>
           <span>Order or booking info:</span>
-          <a class="phone-link" content="+34621011056" href="tel:+34621011056" itemprop="telephone">+34 621011056</a>
+          <a class="phone-link" content="+34662614551" href="tel:+34662614551" itemprop="telephone">+34 662614551</a>
           <br>
           <span>Business inquiries:</span>
-          <a class="phone-link" content="+34665454431" href="tel:+34621341601" itemprop="telephone">+34 621341601</a>
+          <a class="phone-link" content="+34621011056" href="tel:+34621011056" itemprop="telephone">+34 621011056</a>
         </div>
         <div class="col-lg-5 mx-auto about content">
           <iframe width="100%" height="350px" frameborder="0" style="border:0" class="map-frame" itemprop="geo"
@@ -318,9 +330,10 @@
         href="https://www.tripadvisor.com/Restaurant_Review-g315917-d1477947-Reviews-Tapas_Plaza-Nerja_Costa_del_Sol_Province_of_Malaga_Andalucia.html">
         <i class="fab fa-tripadvisor"></i>
       </a>
-      <span class="btn btn-primary btn-sm main-button" data-glf-cuid="2b610753-63be-40b6-8901-87328aaeaea0"
+      <a href="/pages/menu.html" class="btn btn-primary btn-sm main-button" style="padding: 8px;">See Menu</a>
+      <!-- <span class="btn btn-primary btn-sm main-button" data-glf-cuid="2b610753-63be-40b6-8901-87328aaeaea0"
         data-glf-ruid="ec152518-e808-47bc-ad04-f4549137316b" style="padding: 8px;">See MENU & Order Now!</span>
-      <script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async></script>
+      <script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async></script> -->
       <br>
       Est. 2006
     </div>
