--- a/pages/workinghours.html
+++ b/pages/workinghours.html
@@ -34,7 +34,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">tapas plaza</a>
+      <a class="navbar-brand js-scroll-trigger" href="/pages/workinghours.html">tapas plaza</a>
     </div>
   </nav>
 
