--- a/pages/menu.html
+++ b/pages/menu.html
@@ -61,7 +61,7 @@
     <script type="text/javascript">
         document.addEventListener("adobe_dc_view_sdk.ready", function()
         {
-            var adobeDCView = new AdobeDC.View({clientId: 'ab651beeddfd488f8dfda26aaf484318', divId: "menu-pdf"});
+            var adobeDCView = new AdobeDC.View({clientId: 'id', divId: "menu-pdf"});
             adobeDCView.previewFile(
         {
             content:   {location: {url: "/assets/Menu.pdf"}},
