--- a/pages/menu.html
+++ b/pages/menu.html
@@ -61,7 +61,7 @@
     <script type="text/javascript">
         document.addEventListener("adobe_dc_view_sdk.ready", function()
         {
-            var adobeDCView = new AdobeDC.View({clientId: 'id', divId: "menu-pdf"});
+            var adobeDCView = new AdobeDC.View({clientId: '02463254fb494bedbcd5e02f1c9a630d', divId: "menu-pdf"});
             adobeDCView.previewFile(
         {
             content:   {location: {url: "/assets/Menu.pdf"}},
