Remove 'home delivery'

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description"
-    content="Order Online for Takeaway / Delivery or Book a Table. Here at Tapas Plaza - Nerja you'll experience delicious Asian, Thai, Spanish, Salads... Try our mouth-watering dishes, carefully prepared with fresh ingredients! At Tapas Plaza, our recipe for success is simple – Great food & care makes customers return every time.">
+    content="Order Online for Takeaway or Book a Table. Here at Tapas Plaza - Nerja you'll experience delicious Asian, Thai, Spanish, Salads... Try our mouth-watering dishes, carefully prepared with fresh ingredients! At Tapas Plaza, our recipe for success is simple – Great food & care makes customers return every time.">
 
   <title>Tapas Plaza</title>
 
@@ -159,7 +159,7 @@
           <!-- <span class="btn btn-primary main-button" data-glf-cuid="2b610753-63be-40b6-8901-87328aaeaea0"
             data-glf-ruid="ec152518-e808-47bc-ad04-f4549137316b"> See MENU & Order Now!</span>
           <script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async></script> -->
-          <h3>Tapas Plaza now does take-away & home delivery in Nerja! (call us)</h3>
+          <h3>Tapas Plaza now does take-away in Nerja! (call us)</h3>
         </div>
       </div>
     </div>
@@ -274,7 +274,7 @@
           <h1>Where to find us</h1>
           <p itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
             <span itemprop="streetAddress">Paseo Burriana</span>, <span itemprop="addressLocality">Nerja</span> <br>
-            Come visit us or order for delivery:
+            Come visit us or order for takeaway:
           </p>
           <a href="/pages/menu.html" class="btn btn-primary main-button">See Menu</a>
           <!-- <span class="btn btn-primary main-button" data-glf-cuid="2b610753-63be-40b6-8901-87328aaeaea0"
