--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             <img src="./images/frame.png" class="img-fluid" alt="Responsive image">
             <div class="opening-hours">
               <p>
-                Wednesday-Sunday<br>12:00-18:00<br><span class="small-text">Closed when it rains ;)</span>
+                Tuesday-Sunday<br>12:00-21:30<br><span class="small-text">Monday closed</span>
               </p>
           </div>
         </div>
