Add href to 'See Menu' link and update hours on homepage

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               than
               just a meal.
             </p>
-            <a class="btn btn-primary btn-lg main-button d-lg-none">See Menu</a>
+            <a class="btn btn-primary btn-lg main-button d-lg-none" href="/pages/menu.html">See Menu</a>
             <!-- <span class="btn btn-primary btn-lg main-button d-lg-none"
               data-glf-cuid="2b610753-63be-40b6-8901-87328aaeaea0" data-glf-ruid="ec152518-e808-47bc-ad04-f4549137316b">
               See MENU & Order Now!</span>
@@ -259,7 +259,7 @@
             <img src="./images/frame.png" class="img-fluid" alt="Responsive image">
             <div class="opening-hours">
               <p>
-                Tuesday-Sunday<br>12:00-21:30<br><span class="small-text">Monday closed</span>
+                Tuesday-Sunday<br>12:00-17:00<br><span class="small-text">Monday closed</span>
               </p>
           </div>
         </div>
